# RMP220-SDK

./: .gitignore  LICENSE  README.md  Segway_RMP_Init.sh
Firmware/: notice  readme.md
Firmware/V0/: V0_version.md
Firmware/V1/: V1_version.md
LibAPI/: readme.md
LibAPI/Nova-Carter_v2.3/: comm_ctrl_navigation.h  ctrl_x86_64
LibAPI/Nova_Carter_v2.3/: comm_ctrl.h  ctrl_arm64-v8a
LibAPI/exec/: ctrl_arm64-v8a  ctrl_x86_64
LibAPI/include/: comm_ctrl_navigation.h
LibAPI/lib/: lib_version.md
ROS/src/: README.md
ROS/src/segway_msgs/: CMakeLists.txt  package.xml
ROS/src/segway_msgs/action/: ros_set_iap_cmd.action
ROS/src/segway_msgs/msg/: speed_fb.msg
ROS/src/segway_msgs/srv/: ros_get_load_param_cmd.srv  ros_get_sw_version_cmd.srv  ros_set_chassis_enable_cmd.srv  ros_set_chassis_poweroff_cmd.srv
ROS/src/segwayrmp/: CMakeLists.txt  package.xml
ROS/src/segwayrmp/include/: Ge_encoder_odometry.h  Ge_encoder_sensordata.h
ROS/src/segwayrmp/include/segwayrmp/: Odoemtry.h  robot.h
ROS/src/segwayrmp/launch/: base_controller.launch  chassis_response_test.launch  move_base.launch  nav_rviz_view.launch  ninebot_gx_configuration.launch  rbx1_sim_demo.launch  robot_pose_ekf.launch
ROS/src/segwayrmp/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ROS/src/segwayrmp/script/: chassis_response_test.sh
ROS/src/segwayrmp/src/: Ge_encoder_odometry.cpp  SmartCar.cpp  robot.cpp
ROS/src/segwayrmp/tools/: ChassisResponseTest.cpp
ROS2.0/src/segway_msgs/: package.xml
ROS2.0/src/segway_msgs/msg/: ChassisModeFb.msg  ErrorCodeFb.msg
ROS2.0/src/segway_msgs/srv/: ChassisSendEvent.srv  RosGetLowPowerShutdownThresholdCmd.srv  RosGetSwVersionCmd.srv  RosSetChargeMosCtrlCmd.srv
ROS2.0/src/segwayrmp/: CMakeLists.txt  package.xml
ROS2.0/src/segwayrmp/include/segwayrmp/: robot.h
ROS2.0/src/segwayrmp/src/: SmartCar.cpp
ROS2/src/segway_msgs/: CMakeLists.txt
ROS2/src/segway_msgs/action/: RosSetIapCmd.action
ROS2/src/segway_msgs/msg/: BmsFb.msg  ChassisCtrlSrcFb.msg  ChassisMileageMeterFb.msg  MotorWorkModeFb.msg  TicksFb.msg
ROS2/src/segway_msgs/srv/: RosGetChargeMosCtrlStatusCmd.srv  RosGetVelMaxFeedbackCmd.srv  RosSetChassisCalibImuCmd.srv  RosSetLoadParamCmd.srv  RosSetLowPowerShutdownThresholdCmd.srv  RosSetRemovePushCmd.srv  RosSetVelMaxCmd.srv
ROS2/src/segwayrmp/include/: comm_ctrl_navigation.h
ROS2/src/segwayrmp/src/: robot.cpp
ROS2/src/segwayrmp/tools/: drive_segway_sample.cpp
